テスト/src/objects/team_SFO__c.object
<CustomObject>
    <fields>
        <fullName>team_end__c</fullName>
        <label>訓練期間（終了）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>team_start__c</fullName>
        <label>訓練期間（開始）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>teamleader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>チームリーダーは、メンバーを選択したあとに登録してください。</inlineHelpText>
        <label>チームリーダー</label>
        <referenceTo>staff_SFO__c</referenceTo>
        <relationshipLabel>チーム</relationshipLabel>
        <relationshipName>team_staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>trainingterm__c</fullName>
        <label>訓練期間</label>
        <picklist>
            <picklistValues>
                <fullName>第1期</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>第2期</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>第3期</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>第4期</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>チーム</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>チーム名</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA0000001twkNMAQ_00NA0000007Q8E0MAK</fullName>
        <active>true</active>
        <errorMessage>訓練期間と一致しません</errorMessage>
        <field>staff_SFO__c.team__c</field>
        <filterItems>
            <field>$Source.trainingterm__c</field>
            <operation>equals</operation>
            <valueField>team_SFO__c.trainingterm__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>staff_所属チーム</name>
        <sourceObject>staff_SFO__c</sourceObject>
    </namedFilters>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>